# tentacule

./: .flake8  LICENSE  README.md  deploy.sh  noxfile.py  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml
src/py_parallel/: worker_process.py
src/tentacule/: i_process_pool.py  i_worker_process.py  process_pool.py  result_event.py  utils.py  worker_process.py
tests/: conftest.py  depency.py  test_dummy.py  test_simple_functions.py
