[metadata]
name = py-parallel
version = 0.1.0
author = "Charles Smith"
author_email = "binarskugga@gmail.com"
description = "Practical utilities to do efficient parallelism in python"
license = "MIT"

[options]
package_dir =
	=src
packages = find:
include_package_data = True
python_requires > = 3.11
install_requires =
	psutil==5.9.*
	dill==0.3.*
	cachetools==5.3.*
