[metadata]
name = tentacule
version = 0.1.4
author = "Charles Smith"
author_email = "binarskugga@gmail.com"
description = "Tentacule is an uncomplicated library to deal with a pool of worker processes"
license = "MIT"

[options]
package_dir =
	=src
packages = find:
include_package_data = True
python_requires > = 3.11
install_requires =
	dill==0.3.*

[options.packages.find]
where = src
